Fixed stadium from Olimpic to Morazan and also touched up eahc match to card style on mobile devices

--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -2,11 +2,11 @@
 // table mobile button
 #mobile-hdr{
 	background:rgba(72, 85, 99,0.92);
-	padding: 10px 0 0 10px;
+	padding: 10px 0 10px 10px;
 	margin-top: 0;
 	display: none;
 	overflow:hidden;
-	height: 36px;
+	height: 42px;
 	position:fixed;
 	z-index: 10;
 	width: 100%;
